--- a/.gitignore
+++ b/.gitignore
@@ -82,7 +82,6 @@ web_modules/
 .env.development.local
 .env.test.local
 .env.production.local
-.env.local
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -94,7 +93,6 @@ out/
 
 # Nuxt.js build / generate output
 .nuxt/
-dist/
 
 # Gatsby files
 .cache/
@@ -165,15 +163,15 @@ Thumbs.db
 # ------------------------------
 
 # macOS
-.DS_Store
+#.DS_Store
 
 # Windows
-Thumbs.db
+#Thumbs.db
 ehthumbs.db
 Desktop.ini
 
 # Linux
-*~
+#*~
 
 # ------------------------------
 # Other
