--- a/.gitignore
+++ b/.gitignore
@@ -79,8 +79,10 @@ web_modules/
 # dotenv environment variable files
 .env
 .env.local
+.env.development
 .env.development.local
 .env.test.local
+.env.production
 .env.production.local
 
 # parcel-bundler cache (https://parceljs.org/)
