--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,10 @@
   },
   "dependencies": {
     "dotenv": "^16.4.5",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "express-session": "^1.18.1",
+    "passport": "^0.7.0",
+    "passport-spotify": "^2.0.0",
+    "request": "^2.88.2"
   }
 }
