--- a/backend/package.json
+++ b/backend/package.json
@@ -28,8 +28,10 @@
     ]
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-rate-limit": "^7.4.1",
     "express-session": "^1.18.1",
     "passport": "^0.7.0",
     "passport-spotify": "^2.0.0",
