--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,10 +2,14 @@
 PORT=3000
 NODE_ENV=development
 
-# Spotify API Credentials
-SPOTIFY_CLIENT_ID=your_spotify_client_id
-SPOTIFY_CLIENT_SECRET=your_spotify_client_secret
-SPOTIFY_REDIRECT_URI=http://localhost:3000/callback
+# Spotify API Credentials for Client Credentials Flow
+SPOTIFY_CLIENT_IDS=your_spotify_client_id1,your_spotify_client_id2
+SPOTIFY_CLIENT_SECRETS=your_spotify_client_secret1,your_spotify_client_secret2
+
+# Spotify API Credentials for OAuth (for future use)
+SPOTIFY_OAUTH_CLIENT_ID=your_spotify_oauth_client_id
+SPOTIFY_OAUTH_CLIENT_SECRET=your_spotify_oauth_client_secret
+SPOTIFY_REDIRECT_URI=http://localhost:3000/auth/spotify/callback
 
 # YouTube API Credentials
 YOUTUBE_API_KEYS=your_youtube_api_key1,your_youtube_api_key2
@@ -13,5 +17,5 @@ YOUTUBE_API_KEYS=your_youtube_api_key1,your_youtube_api_key2
 # Session Secret
 SESSION_SECRET=your_session_secret
 
-# MongoDB Connection (if using MongoDB)
+# MongoDB Connection
 MONGODB_URI=your_mongodb_connection_string
