Keep the test routes for authentication behind environment variable ENABLE_AUTH_ROUTES

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -11,6 +11,9 @@ SPOTIFY_OAUTH_CLIENT_ID=your_spotify_oauth_client_id
 SPOTIFY_OAUTH_CLIENT_SECRET=your_spotify_oauth_client_secret
 SPOTIFY_REDIRECT_URI=http://localhost:3000/auth/spotify/callback
 
+# Enable or disable auth routes (login, dashboard, logout)
+ENABLE_AUTH_ROUTES=false
+
 # YouTube API Credentials
 YOUTUBE_API_KEYS=your_youtube_api_key1,your_youtube_api_key2
 
