--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,7 @@
     "express-session": "^1.18.1",
     "passport": "^0.7.0",
     "passport-spotify": "^2.0.0",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "winston": "^3.15.0"
   }
 }
