--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,6 +7,7 @@ SPOTIFY_CLIENT_IDS=your_spotify_client_id1,your_spotify_client_id2
 SPOTIFY_CLIENT_SECRETS=your_spotify_client_secret1,your_spotify_client_secret2
 
 # Spotify API Credentials for OAuth (for future use)
+ENABLE_SPOTIFY_INTEGRATION=false
 SPOTIFY_OAUTH_CLIENT_ID=your_spotify_oauth_client_id
 SPOTIFY_OAUTH_CLIENT_SECRET=your_spotify_oauth_client_secret
 SPOTIFY_REDIRECT_URI=http://localhost:3000/auth/spotify/callback
