feat: Set Up YouTube Data API Integration

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -16,6 +16,7 @@ SPOTIFY_REDIRECT_URI=http://localhost:3000/auth/spotify/callback
 ENABLE_AUTH_ROUTES=false
 
 # YouTube API Credentials
+ENABLE_YOUTUBE_INTEGRATION=true
 YOUTUBE_API_KEYS=your_youtube_api_key1,your_youtube_api_key2
 
 # Session Secret
