Fix: App. not reading from the specified environment file.

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,9 @@
   "description": "The backend project for Snyder, based on Node.js.",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "cross-env NODE_ENV=default node server.js",
+    "start:dev": "cross-env NODE_ENV=development node server.js",
+    "start:prod": "cross-env NODE_ENV=production node server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky install"
   },
@@ -12,6 +14,7 @@
   "author": "1varunvc",
   "license": "ISC",
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "eslint": "^9.13.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.31.0",
