--- a/backend/package.json
+++ b/backend/package.json
@@ -38,7 +38,7 @@
     "express-session": "^1.18.1",
     "passport": "^0.7.0",
     "passport-spotify": "^2.0.0",
-    "request": "^2.88.2",
+    "sharp": "^0.33.5",
     "winston": "^3.15.0"
   }
 }
