Implement server-side caching with Redis, hosted on Upstash.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -18,6 +18,9 @@ ENABLE_AUTH_ROUTES=false
 ENABLE_YOUTUBE_INTEGRATION=true
 YOUTUBE_API_KEYS=your_youtube_api_key1,your_youtube_api_key2
 
+# Redis Database
+REDIS_URL=rediss://:your_upstash_password@us1-redis.upstash.io:12345
+
 # Session Secret
 SESSION_SECRET=your_session_secret
 
