--- a/backend/package.json
+++ b/backend/package.json
@@ -38,6 +38,7 @@
     "express-session": "^1.18.1",
     "passport": "^0.7.0",
     "passport-spotify": "^2.0.0",
+    "redis": "^4.7.0",
     "sharp": "^0.33.5",
     "winston": "^3.15.0"
   }
