Use generic terms instead of examples.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -20,7 +20,7 @@ YOUTUBE_API_KEYS=your_youtube_api_key1,your_youtube_api_key2
 
 # Redis Configuration
 ENABLE_CACHE=true
-REDIS_URL=rediss://:your_upstash_password@us1-redis.upstash.io:12345
+REDIS_URL=rediss://:your_upstash_password@your_upstash_subdomain.upstash.io:your_upstash_port
 
 # Session Secret
 SESSION_SECRET=your_session_secret
