--- a/backend/package.json
+++ b/backend/package.json
@@ -40,6 +40,7 @@
     "passport-spotify": "^2.0.0",
     "redis": "^4.7.0",
     "sharp": "^0.33.5",
+    "uuid": "^11.0.3",
     "winston": "^3.15.0"
   }
 }
